@@ -1,5 +1,11 @@
 2007-02-06  Scott James Remnant  <scott@netsplit.com>
 
+	* init/notify.c (notify_event): Pass in the arguments and environment
+	for the event.
+	* init/tests/test_notify.c (check_event): Check for event arguments
+	and environment from the notify process.
+	(test_event): Add arguments and environment to the event we test with
+
 	* upstart/tests/test_message.c (test_new, test_handle): Send
 	arguments and environment with the UPSTART_EVENT_QUEUE and
 	UPSTART_EVENT messages.
